- remove useless “Inactive” lists - add a constructor with no name arg - update treatNewOrders() so it can handle all the receivedOrders list - add most/least selling restaurant method - add most/least active courier method - add all corresponding tests